--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "homepage": "https://mohamednayif.github.io/bedlink/",
+  "homepage": "./",
   "name": "order-delivery-date-confirmation-app",
   "version": "0.1.0",
   "private": true,
