--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "homepage": "./",
   "name": "order-delivery-date-confirmation-app",
@@ -13,12 +12,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^3.3.7",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
+    "font-awesome": "^4.7.0",
     "luxon": "^3.2.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.7",
